refactor : class Epic заменить лист с ID на лист с Subtask, class InMemoryTaskManager изменить методы addSubtask, removeTaskById, getEpicSubtasks, getEpicStatus, class Main изменить case(3), style : создать пакеты Tasks и Managers, переместить классы Task, Epic, Subtask, Status в пакет Tasks, классы Managers, TaskManager, HistoryManager, InMemoryTaskManager, InMemoryHistoryManager в пакет Managers